--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -31,7 +31,7 @@
 				<input class="rounded_corner" type="text" size="40">
 				<input class="rounded_corner" type="submit" value="Buscar">
 				</div>
-				<div class="divBotonPublicar">
+				<div th:if="${session.u.hasRole('EMPRESA')}" class="divBotonPublicar">
 					<button class="btn" id="botonCrearPropuesta">Crear propuesta</button>
 				</div>
 			</div>
