--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,8 +10,8 @@
 </head>
   <body>
      <div class="container">
-      <form class="form-signin" method="post" action="/login">
-        <h2 class="form-signin-heading">Please sign in</h2>
+      <form class="form-signin" method="post" th:action="@{/login}">
+        <h2 class="form-signin-heading">Please entra</h2>
         <p>
           <label for="username" class="sr-only">Username</label>
           <input type="text" id="username" name="username" class="form-control" placeholder="Username" required="" autofocus="">
@@ -20,7 +20,6 @@
           <label for="password" class="sr-only">Password</label>
           <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="">
         </p>
-		<input name="_csrf" type="hidden" value="3d0c8a84-51c8-48fd-81fa-03d1a2a6a73d">
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       </form>
 		<a href="" id="registroLogin">Register</a>
