--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -40,7 +40,7 @@
             <ul class="ulFragment">
                 <li><a th:href="@{/busquedaPerfil}"><i class="fa fa-search" aria-hidden="true"></i> Búsqueda de
                         Perfiles</a></li>
-                <li><a th:class="${nombrePagina}=='BUSQUEDA DE PROPUESTAS'?'active':''"
+                <li><a th:class="${nombrePagina=='BUSQUEDA DE PROPUESTAS'}?'active':''"
                         th:href="@{/busquedaPropuesta}"><i class="fa fa-suitcase" aria-hidden="true"></i> Búsqueda de
                         Propuestas</a></li>
                 <li><a th:href="@{/negociacion}"><i class="fa fa-comment" aria-hidden="true"></i> Chat de
