--- a/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
@@ -6,7 +6,7 @@
 		<div class="w3-container w3-white info divResultadoBusqueda">
 			<div class="imagen" th:attr="data-id=${u.id}">
 				<img src="https://www.pngkey.com/png/full/230-2301779_best-classified-apps-default-user-profile.png"
-					style="width:80%" class="w3-hover-opacity">
+					 class="w3-hover-opacity">
 			</div>
 			<p><b th:text="${u.nombre +' '+ u.apellidos}">Usuario</b></p>
 			<div class="score">
@@ -15,7 +15,7 @@
 				</th:block>
 			</div>
 			<div th:each="tag: ${u.tags}">
-				<button class="w3-button w3-white tags" style="border-radius:12px;" th:text="${tag}">Tag</button>
+				<button class="w3-button w3-white tags" th:text="${tag}">Tag</button>
 			</div>
 				<p th:text="${u.estado}">Praesent tincidunt sed tellus ut rutrum.</p>
 				<button class="btn btnDetalles" th:attr="data-id=${u.id}">Detalles</button>
