--- a/src/main/resources/templates/fragments/resultadoBusquedaPropuestas.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaPropuestas.html
@@ -32,11 +32,8 @@
 	<!-- Pagination -->
 	<div class="w3-center w3-padding-32">
 		<div class="w3-bar">
-			<a href="#" class="w3-bar-item w3-button w3-hover-blue">«</a>
-			<a href="#" class="w3-bar-item w3-blue w3-button">1</a>
-			<a href="#" class="w3-bar-item w3-button w3-hover-blue">2</a>
-			<a href="#" class="w3-bar-item w3-button w3-hover-blue">3</a>
-			<a href="#" class="w3-bar-item w3-button w3-hover-blue">4</a>
-			<a href="#" class="w3-bar-item w3-button w3-hover-blue">»</a>
+		<th:block th:each="i: ${#numbers.sequence(0,numeroPaginas-1)}">
+			<a class="w3-bar-item w3-button w3-hover-blue botonPaginacion" th:text="${i+1}" th:attr="data-prop-indice=${i+1},data-prop-patron=${patron}">No funciona</a>
+		</th:block>	
 		</div>
 	</div>
