--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -15,8 +15,8 @@
 					name: "[[${_csrf.parameterName}]]",
 					value: "[[${_csrf.token}]]"
 				},
-				admin: "[[${ session.u != null && session.u.hasRole('ADMIN') } ? true : false]]",
-				userId: "[[${ session.u != null } ? ${ session.u.id }: -1]]"
+				admin: [[${session.u != null && session.u.hasRole('ADMIN')}?true:false]],
+				userId: [[${session.u != null}?${session.u.id}:-1]]
 			};
 		</script>
 		<script th:src="@{/js/stomp.js}" src="js/stomp.js" type="text/javascript"></script>
