--- a/src/main/resources/static/css/propuesta.css
+++ b/src/main/resources/static/css/propuesta.css
@@ -23,6 +23,7 @@ input[type=file] {
 	flex-direction: column;
 	justify-content: space-evenly;
 	padding: 0 3em 3em 3em;
+	text-align: center;
 }
 
 .texto-propuesta{
