--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,29 +1,34 @@
-<html lang="en"><head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Please sign in</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous">
-	<script src="js/login.js" type="text/javascript"></script>  
-</head>
-  <body>
-     <div class="container">
-      <form class="form-signin" method="post" th:action="@{/login}">
-        <h2 class="form-signin-heading">Please entra</h2>
-        <p>
-          <label for="username" class="sr-only">Username</label>
-          <input type="text" id="username" name="username" class="form-control" placeholder="Username" required="" autofocus="">
-        </p>
-        <p>
-          <label for="password" class="sr-only">Password</label>
-          <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="">
-        </p>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-      </form>
-		<a href="" id="registroLogin">Register</a>
-	</div>
-	<div th:replace="fragments/modal.html"></div>
+<html lang="en">
 
-</body></html>
+<head>
+  <th:block th:replace="fragments/head.html :: header" />
+  <title>Login</title>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous">
+  <script src="js/login.js" type="text/javascript"></script>
+</head>
+
+<body>
+  <div class="container">
+    <p class="logo w3-display-center">INFLUENCING</p>
+    <form class="form-signin w3-panel w3-round w3-white" method="post" th:action="@{/login}">
+      <h3>Introduce nombre de usuario y contraseña</h3>
+      <p>
+        <label for="username" class="sr-only">Username</label>
+        <input type="text" id="username" name="username" class="form-control" placeholder="Username" required=""
+          autofocus="">
+      </p>
+      <p>
+        <label for="password" class="sr-only">Password</label>
+        <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="">
+      </p>
+      <button class="btn" type="submit">Entrar</button>
+    </form>
+    <a href="" id="registroLogin">Registro</a>
+  </div>
+  <div th:replace="fragments/modal.html"></div>
+
+</body>
+
+</html>
