--- a/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
@@ -1,26 +1,35 @@
-
-
 <div class="w3-row-padding">
 
 	<div th:each="u: ${resultadoBusqueda}" class="w3-third w3-container w3-margin-bottom box">
 		<div class="w3-container w3-white info divResultadoBusqueda">
+			
+			<!-- Imagen-->
 			<div class="imagen" th:attr="data-id=${u.id}">
 				<img src="https://www.pngkey.com/png/full/230-2301779_best-classified-apps-default-user-profile.png"
-					 class="w3-hover-opacity">
+					class="w3-hover-opacity">
 			</div>
+
+			<!-- Nombre Usuario -->
 			<p><b th:text="${u.nombre +' '+ u.apellidos}">Usuario</b></p>
+
+			<!-- Valoracion -->
 			<div class="score">
 				<th:block th:each="i: ${#numbers.sequence(1, u.score)}">					
 					<i class="fa fa-star w3-margin-right"></i>
 				</th:block>
 			</div>
+
+			<!-- Tags -->
 			<div th:each="tag: ${u.tags}">
 				<button class="w3-button w3-white tags" th:text="${tag}">Tag</button>
 			</div>
-				<p th:text="${u.estado}">Praesent tincidunt sed tellus ut rutrum.</p>
-				<button class="btn btnDetalles" th:attr="data-id=${u.id}">Detalles</button>
+			
+			<!-- Estado -->
+			<p th:text="${u.estado}">Praesent tincidunt sed tellus ut rutrum.</p>
 
-		
+			<!-- Detalles-->
+			<button class="btn btnDetalles" th:attr="data-id=${u.id}">Detalles</button>
+
 		</div>
 	</div>
 </div>
@@ -30,7 +39,11 @@
 <div class="w3-center w3-padding-32">
 	<div class="w3-bar" >
 		<th:block th:each="i: ${#numbers.sequence(0,numeroPaginas-1)}">
-			<a class="w3-bar-item w3-button w3-hover-blue botonPaginacion" th:text="${i+1}" th:attr="data-prop-indice=${i+1},data-prop-patron=${patron}">No funciona</a>
+			<a class="w3-bar-item w3-button w3-hover-cyan botonPaginacion" th:text="${i+1}" th:attr="data-prop-indice=${i+1},data-prop-patron=${patron}">No funciona</a>
 		</th:block>				
 	</div>
 </div>
+
+<!-- Pagination --
+<div th:replace="fragments/navigation.html :: pagination(numeroPaginas=${numeroPaginas})"></div>
+-->
