--- a/src/main/resources/templates/modals/perfil.html
+++ b/src/main/resources/templates/modals/perfil.html
@@ -20,29 +20,47 @@
   <!-- Main -->
   <main>
 
-      <div th:if="${modo} eq 'VISTA'">
-        <img id="imagen-perfil" src="img/profile.png" width="200" />
-      </div>
-      <div th:if="${modo} eq 'EDICION'">
-        <img id="imagen-perfil" src="img/profile.png" width="200" />
-        <!-- boton para borrar la foto y -->
-      </div>
-      <div th:if="${modo} eq 'CREACION'">
-        <input type="file" name="imagenPerfil">
-      </div>
-
-      <h2 th:text="${usuario.nombre}">Pepito</h2>
-      <div class="score">
-        <th:block th:each="i: ${#numbers.sequence(1, usuario.score)}">					
-					<i class="fa fa-star w3-margin-right"></i>
-				</th:block>
-			</div>
-
-    <div id="tags">
-        <button th:each="i : ${usuario.tags}" class="w3-button w3-white tags" th:text="${i}" style="border-radius:12px;">Tag2</li>
+    <!-- Imagen -->
+    <div class="w3-center" th:if="${modo} eq 'VISTA'">
+      <img id="imagen-perfil" src="img/profile.png">
     </div>
+    <div class="w3-center" th:if="${modo} eq 'EDICION'">
+      <img id="imagen-perfil" src="img/profile.png">
+      <!-- Boton para borrar la foto y -->
+    </div>
+    <div th:if="${modo} eq 'CREACION'">
+      <input type="file" name="imagenPerfil">
+    </div>
+
+    <!-- Nombre -->
+    <h2 th:if="${modo} eq 'VISTA'" th:text="${usuario.nombre}">Nombre Perfil</h2>
+    <div th:if="${modo} eq 'CREACION' or ${modo} eq 'EDICION'">
+      <input type="text" name="nombre" value="Nombre perfil" th:value="{usuario.nombre}">
+    </div>
+
+    <!-- Valoracion-->
+    <div th:if="${modo} eq 'VISTA' or ${modo} eq 'EDICION'">
+      <div class="score" th:if="${usuario.score != null}">
+        <th:block th:each="i: ${#numbers.sequence(1, usuario.score)}">					
+          <i class="fa fa-star w3-margin-right"></i>
+        </th:block>
+      </div>
+      <div class="score" th:if="${usuario.score == null}">
+        <p>No tiene valoraciones aun</p>
+      </div>
+    </div>    
+    
+    <!-- Tags -->
+    <div id="tags" th:if="${modo} eq 'VISTA'">
+      <button th:each="i : ${usuario.tags}" class="w3-button w3-white tags" th:text="${i}" style="border-radius:12px;">Tags</li>
+    </div>
+    <div id="tags" th:if="${modo} eq 'EDICION' or ${modo} eq 'CREACION'">
+      <!-- Hacer array con los tags y mostrarlos para poder seleccionarlos y que los tenga el perfil -->
+    </div>
+
+    <!-- Historial propuestas -->
+    <h2>Historial de propuestas</h2>
     <div id="propuestas">
-      <h2>Historial de propuestas</h2>
       <ul>
         <li>Propuesta1</li>
         <li>Propuesta2</li>
@@ -50,12 +68,20 @@
         <li>Propuesta4</li>
       </ul>
     </div>
-    <div id="edad">
-      <h2>Edad media de los seguidores</h2>
-      <div id="edad-media" th:text="${usuario.edad}">17 años</div>
+    <!-- Hacer historial de propuestas con query en el modelo -->
+
+    <!-- Edad -->
+    <h2>Edad media de los seguidores</h2>
+    <div id="edad" th:if="${modo} eq 'VISTA'">
+      <div id="edad-media" th:text="${usuario.edad}">Años de media</div>
     </div>
+    <div id="edad" th:if="${modo} eq 'EDICION' or ${modo} eq 'CREACION'">
+      <input type="text" name="nombre" value="Años de media" th:value="${usuario.edad}">
+    </div>
+
+    <!-- Seguidores-->
+    <h2>Seguidores en redes sociales</h2>
     <div id="seguidores">
-      <h2>Seguidores en redes sociales</h2>
       <ul>
         <li>
           <a href="twitter.com">@pepitoTwitter</a>
@@ -74,6 +100,7 @@
         </li>
       </ul>
     </div>
+    <!-- Repensar funcionalidad y posible cambio en el modelo -->
 	
   </main>
 </body>
