--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,7 +25,7 @@
       </p>
       <button class="btn" type="submit">Entrar</button>
     </form>
-    <a href="" id="registroLogin">Registro</a>
+    <span id="registroLogin">Registro</span>
   </div>
   <div th:replace="fragments/modal.html"></div>
 
