--- a/src/main/resources/static/css/perfil.css
+++ b/src/main/resources/static/css/perfil.css
@@ -5,13 +5,13 @@
 
 
 main {
-  background-color:#F4F6F6 ;
+  background-color:#F4F6F6;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  padding: 20px;
+  justify-content: space-evenly;
   width: 100%;
+padding-bottom:3em;
   align-items: center;
 }
 
@@ -92,6 +92,7 @@ main {
   list-style-type: none;
   display:flex;
   align-items: center;
+flex-direction: column;
 }
 
 #seguidores span {
