--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -64,7 +64,7 @@
     <div th:fragment="modalBar(nombrePagina)" id="modalBar" class="title w3-display-container">
         <div id="volver" class="w3-button w3-display-topleft"
             onclick="document.getElementById('modal').style.display='none'">
-            <div class="w3-padding w3 w3-text-white"><i class="fa fa-arrow-left w3-large"></i> VOLVER</div>
+            <div class="w3-padding w3 w3-text-white"><img src="img/atras.png" width="20"/> VOLVER</div>
         </div>
         <div id="nombrePagina" class="w3-display-middle nombrePagina">
             <b><span class="w3-text-white" th:text="${nombrePagina}">nombrePagina</span></b>
