--- a/src/main/resources/templates/modals/propuesta.html
+++ b/src/main/resources/templates/modals/propuesta.html
@@ -25,8 +25,10 @@
     <!-- Texto propuesta -->
     <div class="texto-propuesta">
       <div th:if="${modo} eq 'CREACION'">
-        <h2>Nombre</h2><input type=text>
-        <h2>Descripcion</h2><input type=text>
+        <h2>Nombre de la propuesta</h2>
+		<input name="nombre" type=text required>
+        <h2>Descripcion</h2>
+		<textarea name="descripcion"  rows="4" cols="50" required></textarea> 
       </div>
       <div>
         <h2 th:if="${modo} eq 'ULTIMATUM' or ${modo} eq 'VISTA' or ${modo} eq 'VISTA-ULTIMATUM'"
@@ -84,11 +86,11 @@
     <div class="imagen-propuesta">
 
       <h2>Imagen Campaña</h2>
-      <span>
-        <input type="file" name="imagenPropuesta">
-    	<button class="btn">Subir</button>
+<span th:if="${modo} eq 'CREACION'">
+       <input type="file" name="imagenPropuesta">
+</span>
+	  <img th:if="${modo} eq 'VISTA' or ${modo} eq 'ULTIMATUM' or ${modo} eq 'VISTA-ULTIMATUM'"  id="imagen-propuesta" src="img/profile.png">
 
-      </span>
 
     </div>
 
