--- a/src/main/resources/static/css/perfil.css
+++ b/src/main/resources/static/css/perfil.css
@@ -1,9 +1,3 @@
-:root {
-  height: 100%;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-
 main {
   background-color:#F4F6F6;
   flex: 1;
@@ -41,6 +35,7 @@ form{
   justify-content: space-around;
   margin-left: -30px;
   width: 100%;
+  align-items: center;
   align-items: center;
 }
 
@@ -89,7 +84,6 @@ form{
 #seguidores {
   border-radius:10px;
   padding: 6px;
-  display:flex;
   flex-direction:column;
   text-align:center;
   align-items: center;
@@ -99,7 +93,16 @@ form{
   list-style-type: none;
   display:flex;
   align-items: center;
-flex-direction: column;
+  text-align:center;
+  flex-direction: column;
+}
+
+#seguidores li {
+  list-style-type: none;
+  display:flex;
+  align-items: center;
+  text-align:center;
+  flex-direction: column;
 }
 
 #seguidores span {
@@ -153,4 +156,3 @@ flex-direction: column;
 #tags li:hover{
 	transform: scale(1.2);
 }
-
