--- a/src/main/resources/templates/modals/perfil.html
+++ b/src/main/resources/templates/modals/perfil.html
@@ -19,149 +19,154 @@
 
   <!-- Main -->
   <main>
-	<form>
-    <h2 class="w3-padding-24">Nombre Cuenta</h2>
-    <input type="text" name="nombreCuenta" th:if="${modo} eq 'CREACION'" placeholder="Introduzca su usuario" required></input>
+    <form>
 
-    <!-- Nombre -->
-    <h2 class="w3-padding-24">Nombre Perfil</h2>
-    <span th:if="${modo} eq 'VISTA'" th:text="${usuario.nombre}">Nombre Perfil</span>
-    <input type="text" name="nombre" th:if="${modo} eq 'EDICION'" th:text="${usuario.nombre}" required></input>
-    <input type="text" name="nombre" th:if="${modo} eq 'CREACION'" placeholder="Introduzca su nombre" required></input>
-
-
-    <!-- Nombre -->
-    <h2 class="w3-padding-24">Contraseña</h2>
-    <span th:if="${modo} eq 'VISTA'" th:text="${usuario.nombre}">Nombre Perfil</span>
-    <input type="text" name="nombre" th:if="${modo} eq 'EDICION'" th:text="${usuario.nombre}"></input>
-	<div>
-	    <input type="password" name="pass1"  placeholder="Introduzca su contraseña" required></input>
-<br>
-    	<input type="password" name="pass2"  placeholder="Repita la contraseña" required></input>
-	</div>
-	<div>
-	
-	</div>
+      <!-- Nombre de la cuenta (CREACION, EDICION) -->
+      <div class="divCentrado" th:if="${modo} eq 'CREACION' or ${modo} eq 'EDICION'">
+        <h2 class="w3-padding-24">Nombre Cuenta</h2>
+        <input th:if="${modo} eq 'CREACION'" type="text" name="nombreCuenta" placeholder="Introduzca su usuario" required></input>
+        <span th:if="${modo} eq 'EDICION'" th:text="${usuario.nombreCuenta}" class="w3-padding-24">Nombre Cuenta</span>
+      </div>
 
 
-
-    <!-- Imagen -->
-    <h2 class="w3-padding-24">Imagen Perfil</h2>
-    <div class="w3-center" th:if="${modo} eq 'VISTA'">
-      <img id="imagen-perfil" src="img/profile.png">
-    </div>
-    <div class="w3-center" th:if="${modo} eq 'EDICION'">
-      <img id="imagen-perfil" src="img/profile.png">
-      <!-- Boton para borrar la foto y -->
-    </div>
-    <div th:if="${modo} eq 'CREACION'">
-      <input type="file" name="imagenPerfil">
-    </div>
+      <!-- Nombre Perfil -->
+      <h2 class="w3-padding-24">Nombre Perfil</h2>
+      <span th:if="${modo} eq 'VISTA'" th:text="${usuario.nombre}">Nombre Perfil</span>
+      <input type="text" name="nombre" th:if="${modo} eq 'EDICION'" th:text="${usuario.nombre}" required></input>
+      <input type="text" name="nombre" th:if="${modo} eq 'CREACION'" placeholder="Introduzca su nombre"
+        required></input>
 
 
-    <!-- Valoracion-->
-    <div th:if="${modo} eq 'VISTA' or ${modo} eq 'EDICION'">
-      <div class="score" th:if="${usuario.score != null}">
-        <th:block th:each="i: ${#numbers.sequence(1, usuario.score)}">					
+      <!-- Contraseña (CREACION, EDICION) -->
+      <div class="divCentrado" th:if="${modo} eq 'CREACION' or ${modo} eq 'EDICION'">
+        <h2 class="w3-padding-24">Contraseña</h2>
+        <input th:if="${modo} eq 'CREACION'" type="password" name="pass1" placeholder="Introduzca su contraseña"
+          required></input>
+        <input th:if="${modo} eq 'EDICION'" type="password" name="pass1" placeholder="Introduzca su  nueva contraseña"
+          required></input>
+        <br>
+        <input th:if="${modo} eq 'CREACION'" type="password" name="pass2" placeholder="Repita la contraseña"
+          required></input>
+        <input th:if="${modo} eq 'EDICION'" type="password" name="pass2" placeholder="Repita la nueva contraseña"
+          required></input>
+      </div>
+
+
+      <!-- Imagen -->
+      <h2 class="w3-padding-24">Imagen Perfil</h2>
+      <div class="w3-center" th:if="${modo} eq 'VISTA'">
+        <img id="imagen-perfil" src="img/profile.png">
+      </div>
+      <div class="w3-center" th:if="${modo} eq 'EDICION'">
+        <img id="imagen-perfil" src="img/profile.png">
+        <!-- ¿Boton para borrar la foto? -->
+      </div>
+      <div th:if="${modo} eq 'CREACION'">
+        <input type="file" name="imagenPerfil">
+      </div>
+
+
+      <!-- Valoracion (VISTA, EDICION) -->
+      <div class="divCentrado" th:if="${modo} eq 'VISTA' or ${modo} eq 'EDICION'">
+        <div class="score" th:if="${usuario.score != null}">
+          <th:block th:each="i: ${#numbers.sequence(1, usuario.score)}">					
           <i class="fa fa-star w3-margin-right"></i>
-        </th:block>
-      </div>
-      <div class="score" th:if="${usuario.score == null}">
-        <p>No tiene valoraciones aun</p>
-      </div>
-    </div>    
+          </th:block>
+        </div>
+        <div class="score" th:if="${usuario.score == null}">
+          <p>No tiene valoraciones aun</p>
+        </div>
+      </div>    
     
-    <!-- Tags -->
-    <div id="tags" th:if="${modo} eq 'VISTA'">
-      <button th:each="i : ${usuario.tags}" class="w3-button w3-white tags" th:text="${i}" style="border-radius:12px;">Tags</li>
-    </div>
-    <div id="tags" th:if="${modo} eq 'EDICION' or ${modo} eq 'CREACION'">
-      <!-- Hacer array con los tags y mostrarlos para poder seleccionarlos y que los tenga el perfil -->
-    </div>
+      <!-- Tags -->
+      <div id="tags" th:if="${modo} eq 'VISTA'">
+        <button th:each="i : ${usuario.tags}" class="w3-button w3-white tags" th:text="${i}" style="border-radius:12px;">Tags</li>
+      </div>
+      <div id="tags" th:if="${modo} eq 'EDICION' or ${modo} eq 'CREACION'">
+        <!-- Hacer array con los tags y mostrarlos para poder seleccionarlos y que los tenga el perfil -->
+      </div>
 
 
 
-    <!-- Historial propuestas -->
-	<div th:if="${modo} eq 'EDICION' or ${modo} eq 'VISTA'">
-    <h2 class="w3-padding-24">Historial de propuestas</h2>
-    <div id="propuestas">
-      <ul>
-        <li>Propuesta1</li>
-        <li>Propuesta2</li>
-        <li>Propuesta3</li>
-        <li>Propuesta4</li>
-      </ul>
-    </div>
+      <!-- Historial propuestas (VISTA, EDICION) -->
+      <div th:if="${modo} eq 'VISTA' or ${modo} eq 'EDICION'">
+        <h2 class="w3-padding-24">Historial de propuestas</h2>
+        <div id="propuestas">
+          <ul>
+            <li>Propuesta1</li>
+            <li>Propuesta2</li>
+            <li>Propuesta3</li>
+            <li>Propuesta4</li>
+          </ul>
+        </div>
+      </div>
+      <!-- Hacer historial de propuestas con query en el modelo -->
 
-</div>
-    <!-- Hacer historial de propuestas con query en el modelo -->
+      <!-- Edad -->
+      <h2 class="w3-padding-24">Edad media de los seguidores</h2>
+      <div id="edad" th:if="${modo} eq 'VISTA'">
+        <div id="edad-media" th:text="${usuario.edad}">Años de media</div>
+      </div>
 
-    <!-- Edad -->
-    <h2 class="w3-padding-24">Edad media de los seguidores</h2>
-    <div id="edad" th:if="${modo} eq 'VISTA'">
-      <div id="edad-media" th:text="${usuario.edad}">Años de media</div>
-    </div>
-    <div id="edad" th:if="${modo} eq 'EDICION'">
-      <input type="number" name="edad" value="Años de media" th:value="${usuario.edad}" required>
-    </div>
+      <div id="edad" th:if="${modo} eq 'EDICION'">
+        <input type="number" name="edad" min="0" max="100" value="Años de media" th:value="${usuario.edad}" required>
+      </div>
 
-    <div id="edad" th:if="${modo} eq 'CREACION'">
-      <input type="number" name="edad" min="0" max="100" placeholder="Años de media" required>
-    </div>
+      <div id="edad" th:if="${modo} eq 'CREACION'">
+        <input type="number" name="edad" min="0" max="100" placeholder="Años de media" required>
+      </div>
 
-    <!-- Seguidores-->
-    <h2 class="w3-padding-24">Perfiles en redes sociales</h2>
-    <div id="seguidores">
-      <ul th:if="${modo} eq 'EDICION' or ${modo} eq 'VISTA'">
-        <li th:each="perfil: ${perfilesRRSS}">
-	      <span th:text="${perfil.nombre}">nombrePorDefecto</span>
-          <span class="numeroseguidores" th:text="${perfil.numSeguidores}"> 200k </span>
-          <img th:if="${perfil.rrss} eq 'Twitter'" src="img/twitter.png" width="20" />
-          <img th:if="${perfil.rrss} eq 'Facebook'" src="img/twitter.png" width="20" />
-          <img th:if="${perfil.rrss} eq 'Instagram'" src="img/instagram.png" width="20" />
-          <img th:if="${perfil.rrss} eq 'Youtube'" src="img/youtube.png" width="20" />
-        </li>
-      </ul>
+      <!-- Seguidores-->
+      <h2 class="w3-padding-24">Perfiles en redes sociales</h2>
+      <div id="seguidores" class="w3-container w3-round-xlarge w3-aqua w3-margin-bottom">
+        <ul th:if="${modo} eq 'EDICION' or ${modo} eq 'VISTA'">
+          <li th:each="perfil: ${perfilesRRSS}">
+          <span th:text="${perfil.nombre}">nombrePorDefecto</span>
+            <span class="numeroseguidores" th:text="${perfil.numSeguidores}"> 200k </span>
+            <img th:if="${perfil.rrss} eq 'Twitter'" src="img/twitter.png" width="20" />
+            <img th:if="${perfil.rrss} eq 'Facebook'" src="img/twitter.png" width="20" />
+            <img th:if="${perfil.rrss} eq 'Instagram'" src="img/instagram.png" width="20"/>
+            <img th:if="${perfil.rrss} eq 'Youtube'" src="img/youtube.png" width="20" />
+          </li>
+        </ul>
 
-      <ul th:if="${modo} eq 'CREACION'">
-        <li>
-          <span>Twitter: </span>
-          <input type="text" name="nombreTwitter" placeholder="Nombre de la cuenta">
-          <input type="number" name="seguidoresTwitter" placeholder="Nº de seguidores">
-          <img src="img/twitter.png" width="20" />
-      
-        </li>
-        <li>
-          <span>Facebook: </span>
-          <input type="text" name="nombreFacebook" placeholder="Nombre de la cuenta">
-          <input type="number" name="seguidoresFacebook" placeholder="Nº de seguidores">
-          <img src="img/facebook.png" width="20" />
-      
-        </li>
-        <li>
-          <span>Instagram: </span>
-          <input type="text" name="nombreInstagram" placeholder="Nombre de la cuenta">
-          <input type="number" name="seguidoresInstagram" placeholder="Nº de seguidores">
-          <img src="img/instagram.png" width="20" />
-        </li>
-        <li>
-          <span>Youtube: </span>
-          <input type="text" name="nombreYoutube" placeholder="Nombre de la cuenta">
-          <input type="number" name="seguidoresYoutube" placeholder="Nº de seguidores">
-          <img src="img/youtube.png" width="20" />
-        </li>
-      </ul>
+        <ul th:if="${modo} eq 'CREACION'">
+          <li>
+            <span>Twitter: </span>
+            <input type="text" name="nombreTwitter" placeholder="Nombre de la cuenta">
+            <input type="number" name="seguidoresTwitter" placeholder="Nº de seguidores">
+            <img src="img/twitter.png" width="20" />
+        
+          </li>
+          <li>
+            <span>Facebook: </span>
+            <input type="text" name="nombreFacebook" placeholder="Nombre de la cuenta">
+            <input type="number" name="seguidoresFacebook" placeholder="Nº de seguidores">
+            <img src="img/facebook.png" width="20" />
+        
+          </li>
+          <li>
+            <span>Instagram: </span>
+            <input type="text" name="nombreInstagram" placeholder="Nombre de la cuenta">
+            <input type="number" name="seguidoresInstagram" placeholder="Nº de seguidores">
+            <img src="img/instagram.png" width="20" />
+          </li>
+          <li>
+            <span>Youtube: </span>
+            <input type="text" name="nombreYoutube" placeholder="Nombre de la cuenta">
+            <input type="number" name="seguidoresYoutube" placeholder="Nº de seguidores">
+            <img src="img/youtube.png" width="20" />
+          </li>
+        </ul>
 
-    </div>
+      </div>
 
-    <!-- Botones -->
-    <button th:if="${modo} eq 'VISTA'" class="btn">Cerrar perfil</button>
-    <button th:if="${modo} eq 'EDICION'" class="btn">Guardar cambios</button>
-    <button th:if="${modo} eq 'CREACION'" class="btn" id="botonRegistrarseUsuario">Registrar usuario</button>
+      <!-- Botones -->
+      <button th:if="${modo} eq 'VISTA'" class="btn">Cerrar perfil</button>
+      <button th:if="${modo} eq 'EDICION'" class="btn">Guardar cambios</button>
+      <button th:if="${modo} eq 'CREACION'" class="btn" id="botonRegistrarseUsuario">Registrar usuario</button>
 
-
-    <!-- Repensar funcionalidad y posible cambio en el modelo -->
-</form>
+    </form>
   </main>
 </body>
 
